--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.2
   google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.8.0
+  provider: ^6.1.2
+  flutter_localization: ^0.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +63,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
