--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_localization: ^0.2.2
   intl: ^0.19.0
   shared_preferences: ^2.3.2
+  timeago: ^3.7.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
