--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.4.1
   http: ^1.2.2
   url_launcher: ^6.3.1
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
