--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   flutter_native_splash: ^2.4.2
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
-  provider: ^6.1.2
   flutter_localization: ^0.2.2
   intl: ^0.19.0
   shared_preferences: ^2.3.2
@@ -47,6 +46,8 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.3.1
   infinite_scroll_pagination: ^4.1.0
+  flutter_bloc: ^8.1.6
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
